# linux-lvgl-c

./: .gitmodules  CMakeLists.txt  README.md  lv_conf.h  main.c
images/: README.md  gear-solid2.c
ui/: ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
ui/components/: ui_comp_hook.c
ui/screens/: ui_Screen1.c
